tests/typechecker/should_pass/module_that_exports_instance_of_included_module_with_one_argument.csp
module m(z)
x=0
exports
include "module_with_one_argument.csp"
instance im = m1(1)
endmodule
