tests/typechecker/should_fail/split_definitions.csp
f(x) = 0

include "../should_pass/split_definitions_include.csp"
